# ncs-fund

v2.x.x/lesson2/fund_less2_exer1/src/: main.c
v2.x.x/lesson2/fund_less2_exer2/src/: main.c
v2.x.x/lesson3/fund_less3_exer1/: CMakeLists.txt
v2.x.x/lesson3/fund_less3_exer1/src/: main.c
v2.x.x/lesson3/fund_less3_exer2/: CMakeLists.txt  ubx_bmd330eval.overlay
v2.x.x/lesson3/fund_less3_exer2/src/: main.c
v2.x.x/lesson4/fund_less4_exer1/src/: main.c
v2.x.x/lesson4/fund_less4_exer2/src/: main.c
v2.x.x/lesson5/fund_less5_exer1/src/: main.c
v2.x.x/lesson7/fund_less7_exer1/: prj.conf
v2.x.x/lesson7/fund_less7_exer1/src/: main.c
v2.x.x/lesson7/fund_less7_exer2/: prj.conf
v2.x.x/lesson7/fund_less7_exer3/src/: main.c
v2.x.x/lesson8/fund_less8_exer1/src/: main.c
v2.x.x/lesson8/fund_less8_exer2/src/: main.c
